--- a/Ink Canvas/Windows/SettingsViews/SettingsViews/CrashActionPanel.xaml
+++ b/Ink Canvas/Windows/SettingsViews/SettingsViews/CrashActionPanel.xaml
@@ -22,10 +22,10 @@
                                        TextWrapping="Wrap" Foreground="#9a9996" FontSize="11" Margin="0,3.5,0,0" HorizontalAlignment="Left" MaxWidth="450"/>
                         </StackPanel>
                         <WrapPanel Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,8,15,8">
-                            <Border x:Name="CrashActionSilentRestartBorder" Padding="13,7" CornerRadius="8" Background="#e1e1e1" Cursor="Hand" Tag="CrashAction_SilentRestart" Margin="0,0,8,8">
+                            <Border x:Name="CrashActionSilentRestartBorder" Padding="13,7" CornerRadius="8" Cursor="Hand" Tag="CrashAction_SilentRestart" Margin="0,0,8,8" MouseLeftButtonDown="OptionButton_Click">
                                 <TextBlock Foreground="#2e3436" FontSize="14" FontWeight="Bold" Text="静默重启软件"/>
                             </Border>
-                            <Border x:Name="CrashActionNoActionBorder" Padding="13,7" CornerRadius="8" Cursor="Hand" Tag="CrashAction_NoAction" Margin="0,0,8,8">
+                            <Border x:Name="CrashActionNoActionBorder" Padding="13,7" CornerRadius="8" Cursor="Hand" Tag="CrashAction_NoAction" Margin="0,0,8,8" MouseLeftButtonDown="OptionButton_Click">
                                 <TextBlock Foreground="#2e3436" FontSize="14" Text="无操作"/>
                             </Border>
                         </WrapPanel>
