--- a/Ink Canvas/Windows/SettingsViews/SettingsViews/StartupPanel.xaml
+++ b/Ink Canvas/Windows/SettingsViews/SettingsViews/StartupPanel.xaml
@@ -123,7 +123,7 @@
                         </StackPanel>
                         <WrapPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,15,0">
                             <Border x:Name="UpdateChannelReleaseBorder" Padding="13,7" CornerRadius="8" Cursor="Hand" Tag="UpdateChannel_Release" Margin="0,0,8,8" MouseLeftButtonDown="OptionButton_Click">
-                                <TextBlock Foreground="#2e3436" FontSize="14" Text="稳定版"/>
+                                <TextBlock Foreground="#2e3436" FontSize="14" FontWeight="Bold" Text="稳定版"/>
                             </Border>
                             <Border x:Name="UpdateChannelBetaBorder" Padding="13,7" CornerRadius="8" Cursor="Hand" Tag="UpdateChannel_Beta" Margin="0,0,8,8" MouseLeftButtonDown="OptionButton_Click">
                                 <TextBlock Foreground="#2e3436" FontSize="14" Text="测试版"/>
